# agentty

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  gen_words.py  install.sh  test_stream.md
.github/workflows/: ci.yml  release.yml
book/: main.tex  maya-book.aux  maya-book.out  maya-book.toc  preamble.tex
book/chapters/: 01-introduction.aux  01-introduction.tex  02-terminal.aux  02-terminal.tex  03-cpp.aux  03-cpp.tex  04-elm.tex  05-dsl.tex  06-elements.tex  07-layout.tex  07a-concepts.tex  07aa-lifecycle.tex  07b-expected.tex  07bb-a11y.tex  07c-pipeline.tex  07cc-security.tex  07d-style.tex  07dd-cross.tex  07e-builders.tex  07ee-devx.tex  07f-text.tex  07ff-summary.tex  07g-platform.tex  07gg-glossary.tex  07h-focus.tex  07i-scroll.tex  07j-errorboundary.tex  07k-reactivity.tex  07l-runtime.tex  07m-testing.tex  07n-widgetarch.tex  07o-patterns.tex  07p-performance.tex  07q-guarantees.tex  07r-cpp26.tex  07s-comparison.tex  07t-endtoend.tex  07u-dispatch.tex  07v-constexpr.tex  07w-identity.tex  (+3 more)
build_cml/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  fuzzy_match_smoke  param_tag_repair_test  table_render_test
build_cml/maya/: cmake_install.cmake  maya-config.cmake
docs/: ARCHITECTURE.md  DESIGN.md  DISTRIBUTION.md  FROZEN.md  INLINE_SCROLLBACK.md  RUST-CRITIQUE.md  UI.md  auth.md  corruption-analysis.md
docs/website/: acp.md  configuration.md  faq.md  mcp.md  retrieval.md  skills.md  tools.md  why-not-rust.md
include/agentty/acp/: server.hpp
include/agentty/auth/: auth.hpp
include/agentty/domain/: catalog.hpp  conversation.hpp  session.hpp
include/agentty/io/: fsm.hpp  http.hpp  persistence.hpp
include/agentty/provider/: provider.hpp  selection.hpp  wire.hpp
include/agentty/provider/anthropic/: provider.hpp  transport.hpp
include/agentty/provider/ollama/: provider.hpp  transport.hpp
include/agentty/provider/openai/: transport.hpp
include/agentty/rag/: expand.hpp  hnsw.hpp  rag.hpp  rerank.hpp
include/agentty/runtime/: command_palette.hpp  login.hpp  mention_palette.hpp  model.hpp  msg.hpp  picker.hpp  symbol_palette.hpp  tool_output_viewer.hpp  win_shell_encode.hpp
include/agentty/runtime/app/: cmd_factory.hpp  deps.hpp  program.hpp
include/agentty/runtime/app/update/: internal.hpp  stream_args.hpp
include/agentty/runtime/view/: cache.hpp  helpers.hpp  pickers.hpp
include/agentty/runtime/view/thread/: activity_indicator.hpp  activity_indicator_words.hpp  seam.hpp
include/agentty/runtime/view/thread/turn/: turn.hpp
include/agentty/runtime/view/thread/turn/agent_timeline/: agent_timeline.hpp
include/agentty/store/: store.hpp
include/agentty/tool/: mcp_tools_backends.hpp  mcp_tools_bridge.hpp  memory_store.hpp  skills.hpp  spec.hpp  subagent.hpp  tool.hpp  tools.hpp
include/agentty/tool/util/: fs_helpers.hpp  fuzzy_match.hpp
include/agentty/util/: dbglog.hpp  env.hpp
packaging/: README.md
packaging/arch/: PKGBUILD
packaging/deb/: build.sh  control.in
packaging/homebrew/: agentty.rb
packaging/rpm/: agentty.spec.in  build.sh
packaging/scoop/: agentty.json
packaging/termux/: build.sh
packaging/windows/: README.md  build-msi.ps1
packaging/winget/: agentty.agentty.installer.yaml  agentty.agentty.locale.en-US.yaml  agentty.agentty.yaml
scripts/: bump.sh  cut-release.cmd  cut-release.sh  release.sh
src/acp/: server.cpp
src/airgap/: airgap.cpp
src/io/: auth.cpp  clipboard.cpp  http.cpp  persistence.cpp  tls.cpp
src/mcp/: bridge.cpp  http_server.cpp
src/provider/: selection.cpp
src/provider/anthropic/: transport.cpp
src/provider/ollama/: transport.cpp
src/provider/openai/: transport.cpp
src/rag/: bm25.cpp  corpus.cpp  expand.cpp  hnsw.cpp  rerank.cpp
src/runtime/: main.cpp
src/runtime/app/: cmd_factory.cpp  deps.cpp  init.cpp  subscribe.cpp  update.cpp
src/runtime/app/update/: codeblock.cpp  composer.cpp  frozen.cpp  login.cpp  mention.cpp  meta.cpp  modal.cpp  palette.cpp  picker.cpp  stream.cpp  stream_preview.cpp  symbol.cpp  tool.cpp
src/runtime/view/: cache.cpp  composer.cpp  helpers.cpp  login.cpp  pickers.cpp  view.cpp
src/runtime/view/status_bar/: model_badge.cpp  status_bar.cpp  token_stream_sparkline.cpp
src/runtime/view/thread/: activity_indicator.cpp  conversation.cpp  welcome_screen.cpp
src/runtime/view/thread/turn/: turn.cpp
src/runtime/view/thread/turn/agent_timeline/: agent_timeline.cpp  tool_body_preview.cpp  tool_helpers.cpp
src/tool/: mcp_tools_backends.cpp  mcp_tools_bridge.cpp  memory_store.cpp  progress.cpp  registry.cpp  skills.cpp  subagent.cpp
src/tool/tools/: bash.cpp  edit.cpp  read.cpp  search_docs.cpp  skill.cpp  task.cpp  web_fetch.cpp  web_search.cpp  write.cpp
src/tool/util/: arg_reader.cpp  fs_helpers.cpp  fuzzy_match.cpp  subprocess.cpp
src/util/: dbglog.cpp
tests/: acp_integration_test.cpp  anthropic_md_stream.cpp  composer_flicker_probe.cpp  concurrency_primitives_test.cpp  doom_loop_test.cpp  edit_minimal_splice_test.cpp  edit_turn_cpu_probe.cpp  frozen_invariant_fuzz.cpp  fsm_test.cpp  fuzzy_match_smoke.cpp  long_session_bench.cpp  loop_body_split_probe.cpp  md_cache_probe.cpp  md_shape_sweep.cpp  md_shrink_debug.cpp  midrun_freeze_test.cpp  midrun_seam_test.cpp  midrun_wire_test.cpp  model_caps_test.cpp  model_label_test.cpp  o1_probe.cpp  ollama_transport_test.cpp  openai_transport_test.cpp  rag_advanced_test.cpp  rag_expand_test.cpp  rag_hnsw_test.cpp  rag_rerank_test.cpp  rag_test.cpp  realthread_probe.cpp  reveal_freeze_gate_probe.cpp  reveal_pacing_test.cpp  reveal_scrollback_test.cpp  reveal_smoothness_probe.cpp  scrollback_oracle_test.cpp  scrollback_prefix_harness.cpp  scrollback_wire_fuzz.cpp  stream_async_freeze_test.cpp  stream_liveness_test.cpp  stream_md_lag_test.cpp  tallcard_probe.cpp  (+4 more)
